Fix project content centering alignment

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -189,6 +189,8 @@ footer {
   max-width: 900px;
   margin: 0 auto;
   padding: 20px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .project-section {
